tests/parsing/smtlib/mcil/errors/221_define-system_missing_local_list.expected
File "tests/parsing/smtlib/mcil/errors/221_define-system_missing_local_list.mcil", line 1, character 25-26:
1 | (define-system sys :local)
                             ^
Error while parsing a system local definition, read a closing parenthesis,
      but expected a list of sorted variables.
